Made some improvements to the index.html file.

--- a/kiln_app/dashboard/templates/dashboard/index.html
+++ b/kiln_app/dashboard/templates/dashboard/index.html
@@ -7,6 +7,7 @@
 <body>
   <h2 class="title">Caribou Creek Kilns</h2>
   <h1> Kiln-1 </h1>
+  <h5> Job # - {{reading1.load}}</br> Start Date - {{reading1.load.startdate}} </h5>
   <p1 class='temp'>Temperature - <strong>{{reading1.temperature}} F</strong> <br/></p1>
   <br/>
   <p2 class="humid">Humidity - <strong>{{reading1.humidity}} %</strong> <br/></p2>
@@ -16,6 +17,7 @@
 
   <br/>
   <h1> Kiln-2 </h1>
+  <h5> Job # - {{reading2.load}}</br> Start Date - {{reading2.load.startdate}} </h5>
   <p1 class="temp">Temperature - <strong>{{reading2.temperature}} F</strong> <br/></p1>
   <br/>
   <p2 class="humid">Humidity - <strong>{{reading2.humidity}} %</strong> <br/></p2>
