Added the trend row

--- a/kiln_app/dashboard/templates/dashboard/main.html
+++ b/kiln_app/dashboard/templates/dashboard/main.html
@@ -28,6 +28,14 @@
       <td>{{reading1.timestamp}}</td>
 
     </tr>
+    <tr style="text-align: center;">
+      <td>24HR TREND ->> </td>
+      <td>{{trend.kiln1.temperature}} F</td>
+      <td>{{trend.kiln1.humidity}} %</td>
+      <td>{{trend.kiln1.ahumidity}} grams/m3</td>
+      <td>##</td>
+
+    </tr>
 
     </tbody>
   </table>
@@ -56,6 +64,14 @@
       <td>{{reading2.humidity}} %</td>
       <td>{{ah2}} grams/m3</td>
       <td>{{reading2.timestamp}}</td>
+
+    </tr>
+    <tr style="text-align: center;">
+      <td>24HR TREND ->> </td>
+      <td>{{trend.kiln2.temperature}} F</td>
+      <td>{{trend.kiln2.humidity}} %</td>
+      <td>{{trend.kiln2.ahumidity}} grams/m3</td>
+      <td>##</td>
 
     </tr>
 
