fixed some spelling in the main.html

--- a/kiln_app/dashboard/templates/dashboard/main.html
+++ b/kiln_app/dashboard/templates/dashboard/main.html
@@ -2,8 +2,6 @@
 
 {% block main %}
   <p class="lead">Kilns  <i style="color: orange;" title='Edit' class="fas fa-stream"></i></p>
-  <br>
-  <br>
   <p class="lead">Kiln1</p>
   <table class="table table-striped">
     <thead>
@@ -13,7 +11,7 @@
 
         <th>Temperature</th>
         <th>Humidity</th>
-        <th>Abslute Humidity</th>
+        <th>Absolute Humidity</th>
         <th>Time Stamp</th>
 
       </tr>
@@ -40,8 +38,6 @@
     </tbody>
   </table>
 
-  <br>
-  <br>
   <p class="lead">Kiln2</p>
   <table class="table table-striped">
     <thead>
@@ -51,7 +47,7 @@
 
         <th>Temperature</th>
         <th>Humidity</th>
-        <th>Abslute Humidity</th>
+        <th>Absolute Humidity</th>
         <th>Time Stamp</th>
 
       </tr>
@@ -78,8 +74,6 @@
     </tbody>
   </table>
 
-<br>
-<br>
 <p class="lead">Current Conditions Outside</p>
 <table class="table table-striped">
   <thead>
