Added google analyitcs tag

--- a/kiln_app/dashboard/templates/dashboard/index.html
+++ b/kiln_app/dashboard/templates/dashboard/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-149828911-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-149828911-1');
+</script>
+
 <title>Kiln Sensor App</title>
     <link rel="stylesheet" type="text" href="/static/css/main.css">
 </head>
