added graphs for each kiln

--- a/kiln_app/dashboard/templates/dashboard/main.html
+++ b/kiln_app/dashboard/templates/dashboard/main.html
@@ -2,7 +2,7 @@
 
 {% block main %}
   <!-- <p class="lead">Kilns  <i style="color: orange;" title='Edit' class="fas fa-stream"></i></p> -->
-  <h2><span class='badge badge-primary'>Kiln - 1 </span><span class='badge badge-secondary'>Day {{daynum1}}</span></h2>
+  <h2><a href="/kiln/1/"><span class='badge badge-primary'>Kiln - 1 </span></a><span class='badge badge-secondary'>Day {{daynum1}}</span></h2>
   <table class="table table-striped shadow-lg p-3 mb-5 bg-white rounded">
     <thead>
       <tr style="text-align: center;">
@@ -58,7 +58,7 @@
     </tbody>
   </table>
 
-  <h2><span class='badge badge-primary'>Kiln - 2 </span><span class='badge badge-secondary'>Day {{daynum2}}</span></h2>
+  <h2><a href='kiln/2/'><span class='badge badge-primary'>Kiln - 2 </span></a><span class='badge badge-secondary'>Day {{daynum2}}</span></h2>
   <table class="table table-striped shadow-lg p-3 mb-5 bg-white rounded">
     <thead>
       <tr style="text-align: center;">
