changed the line style of the chart

--- a/kiln_app/dashboard/templates/dashboard/test.html
+++ b/kiln_app/dashboard/templates/dashboard/test.html
@@ -62,7 +62,8 @@
     borderColor: [
     'rgba(200, 99, 132, .7)',
     ],
-    borderWidth: 2
+    borderWidth: 2,
+    pointRadius: 0,
     },
     {
     label: "Humidity",
@@ -73,7 +74,8 @@
     borderColor: [
     'rgba(0, 10, 130, .7)',
     ],
-    borderWidth: 2
+    borderWidth: 2,
+    pointRadius: 0,
     }
     ]
     },
