--- a/kiln_app/dashboard/templates/dashboard/test.html
+++ b/kiln_app/dashboard/templates/dashboard/test.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Material Design Bootstrap</title>
+  <title>Kiln-Chart</title>
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- Bootstrap -->
@@ -18,6 +18,7 @@
 <body>
 
   <!-- Start your project here-->
+  <h1> 4 Day Graph </h1>
   <div style="height: 100vh">
     <div class="flex-center flex-column">
 
