--- a/kiln_app/dashboard/templates/dashboard/test.html
+++ b/kiln_app/dashboard/templates/dashboard/test.html
@@ -18,7 +18,7 @@
 <body>
 
   <!-- Start your project here-->
-  <h1> 4 Day Graph </h1>
+  <h1>All Time Graph</h1>
   <div style="height: 100vh">
     <div class="flex-center flex-column">
 
