--- a/kiln_app/dashboard/templates/dashboard/base.html
+++ b/kiln_app/dashboard/templates/dashboard/base.html
@@ -21,14 +21,14 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <style media="screen">
 
-        body {
+        /* body {
         background: url('https://source.unsplash.com/twukN12EN7c/1920x1080') no-repeat center center fixed;
         -webkit-background-size: cover;
         -moz-background-size: cover;
         background-size: cover;
         -o-background-size: cover;
         background-color: blue;
-      }
+      } */
       .container {
         margin-top: 100px;
       }
