Made the caribou head logo a button that returns to the home page.

--- a/kiln_app/dashboard/templates/dashboard/base.html
+++ b/kiln_app/dashboard/templates/dashboard/base.html
@@ -65,7 +65,7 @@
 
   <body>
      <nav class="navbar navbar-expand-md navbar-grey bg-dark fixed-top">
-       <a class="navbar-brand"><img src= '{% static "dashboard/CaribouHead.png"%}' alt="Caribou Head"alt="" width="32"></a>
+       <a class="navbar-brand" href="/"><img src= '{% static "dashboard/CaribouHead.png"%}' alt="Caribou Head"alt="" width="32"></a>
 
        <ul class="nav navbar-nav mr-auto"></ul>
        <ul class="nav navbar-nav">
