Made a change to the charts to make it start at the y scale ticks start at 0

--- a/kiln_app/dashboard/templates/dashboard/detail_chart.html
+++ b/kiln_app/dashboard/templates/dashboard/detail_chart.html
@@ -82,6 +82,13 @@
     ]
     },
     options: {
+      scales: {
+            yAxes: [{
+                ticks: {
+                    beginAtZero:true
+                }
+            }]
+        },
     labels:{
       fontColor: '#fff',
       fontSize: 20,
