--- a/kiln_app/dashboard/templates/dashboard/main.html
+++ b/kiln_app/dashboard/templates/dashboard/main.html
@@ -3,6 +3,16 @@
 {% block main %}
   <!-- <p class="lead">Kilns  <i style="color: orange;" title='Edit' class="fas fa-stream"></i></p> -->
   <h2><a href="/kiln/1/"><span class='badge badge-primary'>Kiln - 1 </span></a><span class='badge badge-secondary'>Day {{daynum1}}</span></h2>
+  <div class="alert alert-warning">
+  <h4 class="alert-heading">Note</h4>
+  <p class="mb-0">By measuring the air temperature and humidity we are indirectly making a best guess at the MC is of the fiber.
+    So for example when green logs are put into the kiln at MC of 35%-40%. We know from past expierence what the temperature and humidity will be.
+    The same is true of dry logs. We know what the air temp and humidity is at the point that they are dry.
+    This makes an assumption on how fast moisture leaves the kiln itself. Kiln-1 is much less air-tight than Kiln-2.
+    So the air temperature and humidity is different for each kiln when the wood is dry. The fiber is close to dry when <strong>Kiln-1 (RH = 10%:Temp = 150) and Kiln-2 (RH = 20%:Temp = 145)</strong>.
+    This is a guide and not a replacement for measuring the MC with the probe. 
+     </p>
+</div>
   <table class="table table-striped shadow-lg p-3 mb-5 bg-white rounded">
     <thead>
       <tr style="text-align: center;">
@@ -61,6 +71,7 @@
   </table>
 
   <h2><a href='kiln/2/'><span class='badge badge-primary'>Kiln - 2 </span></a><span class='badge badge-secondary'>Day {{daynum2}}</span></h2>
+
   <table class="table table-striped shadow-lg p-3 mb-5 bg-white rounded">
     <thead>
       <tr style="text-align: center;">
