Changed the title of the graph template

--- a/kiln_app/dashboard/templates/dashboard/detail_chart.html
+++ b/kiln_app/dashboard/templates/dashboard/detail_chart.html
@@ -18,7 +18,7 @@
 <body>
 
   <!-- Start your project here-->
-  <h1>All Time Graph</h1>
+  <h1>7 Day Graph of Temperature and Humidity</h1>
   <div style="height: 100vh">
     <div class="flex-center flex-column">
 
