added navigation buttons

--- a/kiln_app/dashboard/templates/dashboard/main_dev.html
+++ b/kiln_app/dashboard/templates/dashboard/main_dev.html
@@ -2,7 +2,7 @@
 
 {% block main %}
 
-<div class='flex-box-cards' style='width: 100%; padding: 0px;'>
+<div class='flex-box-cards' style='width: 100%; padding-top: 100px;'>
   <div class='card'>
       <div class="card-flex-item">
         <div class="card-item"><h1>Kiln 1</h1></div>
