--- a/kiln_app/dashboard/templates/dashboard/base_dev.html
+++ b/kiln_app/dashboard/templates/dashboard/base_dev.html
@@ -30,9 +30,6 @@
         justify-content: space-evenly;
         flex-wrap: wrap;
 
-
-
-
       }
 
       .card {
@@ -63,14 +60,22 @@
         flex-grow: 1;
         border-radius: 5px;
 
-
-
-
     </style>
   </head>
   <body>
+  <nav class="navbar navbar-expand-md navbar-grey bg-dark fixed-top">
+    <a class="navbar-brand" href="/"><img src= '{% static "dashboard/CaribouHead.png"%}' alt="Caribou Head"alt="" width="32"></a>
 
-    <div>
+    <ul class="nav navbar-nav mr-auto"></ul>
+    <ul class="nav navbar-nav">
+      <li class="nav-item" style=" margin: 4px;"><a class="btn btn-outline-light" href="/">Old Dashboard</a></li>
+      <li class="nav-item" style=" margin: 4px;"><a class="btn btn-outline-light" href="/main_dev">New Dashboard</a></li>
+      <li class="nav-item" style=" margin: 4px;"><a class="btn btn-outline-light" href="/api">Add Load</a></li>
+
+    </ul>
+  </nav>
+
+    <div style=" padding-top: 100px; padding-left: 10px; padding-right: 10px; ">
      {% block main %}
      {% endblock main %}
    </div>
