--- a/kiln_app/dashboard/templates/dashboard/main_dev.html
+++ b/kiln_app/dashboard/templates/dashboard/main_dev.html
@@ -89,8 +89,33 @@
           <div style=" text-align: center"><h2><i class="fas fa-arrow-down"></i> {{trend.kiln2.humidity}} %</h2></div>
           {% endif %}
         </div>
-      </div>
 
+      </div>
+      <!-- <div class="card-flex-item">
+        <div class="card-item">
+          <table class="charts-css line" id="my-chart">
+
+            <tbody>
+              <tr>
+                <td style="--start: 0.2; --size: 0.4"> <span class="data"> $ 40K </span> </td>
+              </tr>
+              <tr>
+                <td style="--start: 0.4; --size: 0.8"> <span class="data"> $ 80K </span> </td>
+              </tr>
+              <tr>
+                <td style="--start: 0.8; --size: 0.6"> <span class="data"> $ 60K </span> </td>
+              </tr>
+              <tr>
+                <td style="--start: 0.6; --size: 1.0"> <span class="data"> $ 100K </span> </td>
+              </tr>
+              <tr>
+                <td style="--start: 1.0; --size: 0.3"> <span class="data"> $ 30K </span> </td>
+              </tr>
+            </tbody>
+
+          </table>
+        </div>
+      </div> -->
 
   </div>
 
