added the random joke

--- a/kiln_app/dashboard/templates/dashboard/main_dev.html
+++ b/kiln_app/dashboard/templates/dashboard/main_dev.html
@@ -91,6 +91,7 @@
         </div>
 
       </div>
+
       <!-- <div class="card-flex-item">
         <div class="card-item">
           <table class="charts-css line" id="my-chart">
@@ -118,6 +119,12 @@
       </div> -->
 
   </div>
+  <div style='margin: 5px;'>
+    <h4> Random Joke </h4>
+    <p>{{setup}}</p>
+    <hr>
+    <p style='delay: 10s;'>{{punchline}}</p>
 
+  </div>
 </div>
 {% endblock %}
