--- a/kiln_app/dashboard/templates/dashboard/base_dev.html
+++ b/kiln_app/dashboard/templates/dashboard/base_dev.html
@@ -66,8 +66,9 @@
   <nav class="navbar navbar-expand-md navbar-grey bg-dark fixed-top">
     <a class="navbar-brand mr-auto" href="/"><img src= '{% static "dashboard/CaribouHead.png"%}' alt="Caribou Head"alt="" width="32"></a>
     <ul class="nav ">
-      <li class="nav-item" style=" margin: 4px;"><a class="btn btn-warning" href="/old_dash">Old Dashboard</a></li>
-      <li class="nav-item" style=" margin: 4px;"><a class="btn btn-info" href="/main_dev">New Dashboard</a></li>
+      <li class="nav-item" style=" margin: 4px;"><a class="btn btn-warning" href="/joke">Brighten My Day</a></li>
+      <li class="nav-item" style=" margin: 4px;"><a class="btn btn-info" href=" ">Dashboard</a></li>
+
       <li class="nav-item" style=" margin: 4px;"><a class="btn btn-success" href="/api">Add Load</a></li>
 
     </ul>
