--- a/kiln_app/dashboard/templates/dashboard/base_dev.html
+++ b/kiln_app/dashboard/templates/dashboard/base_dev.html
@@ -67,7 +67,7 @@
     <a class="navbar-brand mr-auto" href="/"><img src= '{% static "dashboard/CaribouHead.png"%}' alt="Caribou Head"alt="" width="32"></a>
     <ul class="nav ">
       <li class="nav-item" style=" margin: 4px;"><a class="btn btn-warning" href="/joke">Brighten My Day</a></li>
-      <li class="nav-item" style=" margin: 4px;"><a class="btn btn-info" href=" ">Dashboard</a></li>
+      <li class="nav-item" style=" margin: 4px;"><a class="btn btn-info" href="/main_dev">Dashboard</a></li>
 
       <li class="nav-item" style=" margin: 4px;"><a class="btn btn-success" href="/api">Add Load</a></li>
 
